--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#masks to be used later\n",
+    "#masks to be used alot later\n",
     "treated = lalonde_df.treat == 1\n",
     "untreated = lalonde_df.treat == 0\n",
     "\n",
@@ -86,13 +86,7 @@
    "source": [
     "**i - Visualizing the data:**\n",
     "\n",
-    "We suppose that the first step of the analysis would be to plot the data to be able to have a visual summary of what it says.\n",
-    "\n",
-    "_**Note:** we used the [following StackOverflow code](https://stackoverflow.com/questions/8822370/plot-line-graph-from-histogram-data-in-matplotlib) to compute the histograms as a continuous function._\n",
-    "\n",
-    "\n",
-    "**leos' comment: I think it might be better to show the discrete histogram, as we don't have that many data points? why use a continuous one, if we want to use it we should justify it better**\n",
-    "**we could also say that this is a log-normal distribution (lot's of 0's and very few high values)**"
+    "We suppose that the first step of the analysis would be to plot the data to be able to have a visual summary of what it says."
    ]
   },
   {
@@ -103,19 +97,11 @@
    },
    "outputs": [],
    "source": [
-    "import pylab as p\n",
-    "\n",
-    "val_range = (0, np.maximum(treated_salary.max(), untreated_salary.max()))\n",
-    "\n",
-    "u_y, u_binEdges = np.histogram(untreated_salary, bins = 100, range=val_range)\n",
-    "u_centers = 0.5*(u_binEdges[1:] + u_binEdges[:-1])\n",
-    "p.plot(u_centers, u_y, '-')\n",
-    "\n",
-    "t_y, t_binEdges = np.histogram(treated_salary, bins = 100, range=val_range)\n",
-    "t_centers = 0.5*(t_binEdges[1:] + t_binEdges[:-1])\n",
-    "p.plot(t_centers, t_y, '-')\n",
-    "\n",
-    "p.show()"
+    "plt.figure(figsize=(10, 4))\n",
+    "plt.hist([untreated_salary,treated_salary], bins=100)\n",
+    "plt.title('Histogram showing salary treated and untreated groups')\n",
+    "plt.legend(['untreated', 'treated'])\n",
+    "plt.show()"
    ]
   },
   {
@@ -560,9 +546,20 @@
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(figsize=(10, 8))\n",
-    "corr = lalonde_df.corr()\n",
+    "corr = lalonde_df[intervals].corr()\n",
     "sns.heatmap(corr, mask=np.zeros_like(corr, dtype=np.bool), cmap=sns.diverging_palette(220, 10, as_cmap=True),\n",
     "            square=True, ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "sns.pairplot(lalonde_df[intervals+['treat']], markers='+', hue='treat')"
    ]
   },
   {
@@ -578,7 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prop_table = lalonde_df.copy() #otherwise we modify lalonde_df when we modyfy prop_table"
+    "prop_table = lalonde_df.copy() #otherwise we modify lalonde_df when we modify prop_table"
    ]
   },
   {
@@ -587,16 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del prop_table['re78'], prop_table['re75'] # isn't 75 already treated? or not idk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = prop_table.iloc[:, 2:] #rows age to 're74'\n",
+    "X = prop_table.iloc[:, 2:-2] #rows age to 're75'\n",
     "y = prop_table.iloc[:, 1:2] #treated or not\n",
     "y = np.ravel(y) #flatten array\n",
     "print('Our Y : ', y[0:5],'\\nOur X', X[0:5])"
@@ -621,8 +609,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"prediction : \", logistic.predict(prop_table.iloc[:6, 2:]), ' reality :', y[0:6])\n",
-    "print('prediction in percent : \\n', logistic.predict_proba(prop_table.iloc[:6, 2:]))"
+    "print(\"prediction : \", logistic.predict(X[0:6]), ' reality :', y[0:6])\n",
+    "print('prediction in percent : \\n', logistic.predict_proba(X[0:6]))"
    ]
   },
   {
@@ -631,9 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "propensity_scores = pd.DataFrame(logistic.predict_proba(X)) #get propensity scores for everybody\n",
-    "propensity_scores['y'] = y\n",
-    "propensity_scores['id'] = lalonde_df['id']#keepy y values for each"
+    "prop_table['propensity_scores'] = pd.Series(logistic.predict_proba(X)[:,1]) #get propensity scores for \"not being a subject\""
    ]
   },
   {
@@ -642,7 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "propensity_scores.head()"
+    "prop_table.head()"
    ]
   },
   {
@@ -686,7 +672,7 @@
    "source": [
     "B = nx.Graph()\n",
     "#creat graph with nodes as id\n",
-    "B.add_nodes_from(propensity_scores['id'])"
+    "B.add_nodes_from(prop_table['id'])"
    ]
   },
   {
@@ -699,11 +685,10 @@
    "source": [
     "# add edges from each treated to each untreated subject\n",
     "# with weight on each node being the difference between the two\n",
-    "\n",
-    "for row_i in propensity_scores[propensity_scores['y'] ==0 ].iterrows():\n",
-    "    for row_j in propensity_scores[propensity_scores['y'] ==1 ].iterrows():\n",
-    "        B.add_edge(row_i[1]['id'],row_j[1]['id'], weight= -np.abs(row_i[1][0] - row_j[1][0]))\n",
-    "        #1-x to transform minimisation problem into maximisation problem"
+    "for row_i in prop_table[treated].iterrows():\n",
+    "    for row_j in prop_table[untreated].iterrows():\n",
+    "        B.add_edge(row_i[1]['id'],row_j[1]['id'], weight= -np.abs(row_i[1].propensity_scores - row_j[1].propensity_scores))\n",
+    "        #-x to transform minimisation problem into maximisation problem"
    ]
   },
   {
@@ -723,8 +708,17 @@
    "source": [
     "#print(np.mean(treated_subjects[0]), '\\n', np.mean(untreated_subjects[0])) #the difference between the two means is quite large :(\n",
     "#check sum should be minimized\n",
-    "remaning_subjects = lalonde_df[lalonde_df['id'].isin(matching_dict)]\n",
+    "remaning_subjects = prop_table[prop_table['id'].isin(matching_dict)]\n",
     "len(remaning_subjects)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(prop_table[intervals+['treat']], markers='+', hue='treat')"
    ]
   },
   {
@@ -743,8 +737,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.boxplot([treated_subjects.re78, untreated_subjects.re78], labels=['treated', 'untreated'])\n",
-    "plt.show()"
+    "remaning_subjects.groupby('treat')['educ'].describe() # this one is similar! good!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaning_subjects.groupby('treat')['married'].describe() # similar! good!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaning_subjects.groupby('treat')['age'].describe() # could be better but ok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaning_subjects.groupby('treat')['nodegree'].describe()  #not too bad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaning_subjects.groupby('treat')['black'].describe() #unbalanced"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaning_subjects.groupby('treat')['hispan'].describe() #similar -> okay!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaning_subjects.groupby('treat')['re74'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaning_subjects.groupby('treat')['re75'].describe() #quite similar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for col in intervals:\n",
+    "    print('Visualization of :', col)\n",
+    "    plt.title(\"Boxplot of \" + col)\n",
+    "    plt.boxplot([untreated_subjects[col], treated_subjects[col]], labels=['untreated', 'treated'])\n",
+    "    plt.figure()\n",
+    "    \n",
+    "    bins = np.linspace(np.min(remaning_subjects[col]), np.max(remaning_subjects[col]), 30)\n",
+    "    plt.title(\"Histogram of \" + col)\n",
+    "    plt.hist(untreated_subjects[col], bins, alpha=0.5)\n",
+    "    plt.hist(treated_subjects[col], bins, alpha=0.5)\n",
+    "    plt.show()"
    ]
   },
   {
