--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#imports (same as tuto ML)\n",
@@ -42,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import the data set\n",
@@ -68,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#masks to be used later\n",
@@ -99,6 +105,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -142,6 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -186,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.boxplot([treated_salary, untreated_salary], labels=['treated', 'untreated'])\n",
@@ -240,6 +250,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -282,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#As this does not work yet, we \"comment\" it\n",
@@ -310,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Implement parallel plot\n",
@@ -356,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tot_u, tot_t = lalonde_df.groupby('treat')['id'].count()"
@@ -374,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "blacks_u, blacks_t = lalonde_df[lalonde_df.black == 1].groupby('treat')['id'].count()\n",
@@ -385,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "u_race_rates = ([blacks_u, hispan_u, whites_u]/tot_u)*100\n",
@@ -396,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -410,6 +433,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -433,7 +457,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "degree_u, degree_t = lalonde_df[lalonde_df.nodegree == 0].groupby('treat')['id'].count()\n",
@@ -443,7 +469,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "u_degree_rates = ([degree_u, no_degree_u]/tot_u)*100\n",
@@ -454,7 +482,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -467,7 +497,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -489,7 +521,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "married_u, married_t = lalonde_df[lalonde_df.married == 1].groupby('treat')['id'].count()\n",
@@ -499,7 +533,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "u_married_rates = ([married_u, not_married_u]/tot_u)*100\n",
@@ -510,7 +546,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -524,6 +562,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -556,7 +595,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots(figsize=(10, 8))\n",
@@ -575,7 +616,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prop_table = lalonde_df.copy() #otherwise we modify lalonde_df when we modyfy prop_table"
@@ -584,7 +627,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "del prop_table['re78'], prop_table['re75'] # isn't 75 already treated? or not idk"
@@ -593,7 +638,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = prop_table.iloc[:, 2:] #rows age to 're74'\n",
@@ -606,6 +653,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -618,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"prediction : \", logistic.predict(prop_table.iloc[:6, 2:]), ' reality :', y[0:6])\n",
@@ -628,7 +678,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "propensity_scores = pd.DataFrame(logistic.predict_proba(X)) #get propensity scores for everybody\n",
@@ -639,7 +691,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "propensity_scores.head()"
@@ -671,7 +725,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -681,7 +737,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "B = nx.Graph()\n",
@@ -693,6 +751,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -709,7 +768,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "matching_dict = nx.max_weight_matching(B, maxcardinality=True)"
@@ -718,7 +779,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#print(np.mean(treated_subjects[0]), '\\n', np.mean(untreated_subjects[0])) #the difference between the two means is quite large :(\n",
@@ -730,7 +793,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "treated_subjects = remaning_subjects[remaning_subjects['treat'] == 1]\n",
@@ -740,7 +805,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.boxplot([treated_subjects.re78, untreated_subjects.re78], labels=['treated', 'untreated'])\n",
@@ -757,7 +824,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -771,7 +840,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -794,7 +865,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# create the TF-IDF vectorizer\n",
@@ -804,7 +877,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import the data we need to use the vectorizer on. Remove metadata as proposed by sci-kit tutorial\n",
@@ -821,7 +896,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# vectors is a sparse matrix\n",
@@ -839,6 +916,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -856,18 +934,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.\n",
-    "\n",
-    "Train a random forest on your training set. Try to fine-tune the parameters of your predictor on your validation set using a simple grid search on the number of estimator \"n_estimators\" and the max depth of the trees \"max_depth\". Then, display a confusion matrix of your classification pipeline. Lastly, once you assessed your model, inspect the `feature_importances_` attribute of your random forest and discuss the obtained results.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now we need to train a random forest on our training set. For this, we will use the RandomForestClassifier, as it contains the parameters talked about in the exercise. But first, we need to ask ourselves what we want to set the parameters (*max_depth* and *n_estimators*) to.\n",
     "\n",
-    "According to the ADA course, we know that the number of trees will be in the 10's and the depth will be betweem 20 to 30. Thus for the training set, we set *n_estimators* to 10 and *max_depth* to 25.\n",
+    "According to the ADA course, we know that the number of trees will be in the 100's and the depth will be betweem 20 to 30. Thus for the training set, we set *n_estimators* to 100 and *max_depth* to 25.\n",
     "\n",
     "For the predictions, we can't use the training set, as we just trained on it and thus would get very good results regardless. So prediction has to be on the validation set."
    ]
@@ -891,9 +960,9 @@
    "source": [
     "As we can see, predictions aren't that great.\n",
     "\n",
-    "We try to fine tune on the validation set. Note that to do this, we usethe GridSearch implemented in sklearn. We first chose he estimators between 100 and 1000 and a depth between 20 and 30 as it is what we have seen during the lessons, but seeing as the results for the best parameters were the upper limit (30 and 1000) we decided to look if it would still be the same by taking a larger upper limit (35 and 1500).\n",
+    "We try to fine tune on the validation set. We tried to use skikit's GridSearchCV function, but could not find the right parameters to make thefunction work. In fact, the best parameters were almost always the highest ones, yet the results of predictions stayed quite poor.\n",
     "\n",
-    "Also, as we have already our own training, validation and test sets, we need to use *PredefinedSplit* in the GridSearch.\n",
+    "Thus, we decided to use a double for loop. Even if this type of computation is very heavy and takes a lot more time, it seemed the easier.\n",
     "\n",
     "Please note that the fit takes a lot of time to compute, as there are a very large numbers of estimators."
    ]
@@ -901,52 +970,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "param_grid = { \n",
-    "    'n_estimators': [1000],\n",
-    "    'max_depth': [250, 500]\n",
-    "}\n",
-    "\n",
-    "CV_rfc = GridSearchCV(estimator=clf, param_grid=param_grid, n_jobs=-1)"
+    "# We create a DF to be able to use all this data effectively\n",
+    "columns=['Depth', 'Estimators', 'Prediction']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "CV_rfc.fit(vect_valid, newsgroups_valid)"
+    "rows = []\n",
+    "# We made a few tries already to determine which values yield better results.\n",
+    "# We have a double for loop. Which is aweful and will take a lot of time, but necessary.\n",
+    "for i in range(45, 51): #making sure the depth is not better above 30\n",
+    "    for j in range(700, 1100, 100): #step of 100 to not take too much time\n",
+    "        clf = RandomForestClassifier(n_estimators=j, max_depth=i, random_state=1)\n",
+    "        clf.fit(vect_train, newsgroups_train)\n",
+    "        pred = clf.predict(vect_valid)\n",
+    "        pred_result = metrics.f1_score(newsgroups_valid, pred, average='macro')\n",
+    "        # uncomment next line to be able to know where computation is at\n",
+    "        # print(i,\" ; \", j)\n",
+    "        rows.append([i, j, pred_result])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "print(CV_rfc.best_params_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf = RandomForestClassifier(n_estimators=1000, max_depth=250, random_state=1, n_jobs=-1)\n",
-    "clf.fit(vect_train, newsgroups_train)\n",
-    "pred = clf.predict(vect_valid)\n",
-    "metrics.f1_score(newsgroups_valid, pred, average='macro')"
+    "all_predictions = pd.DataFrame(rows, columns=columns) # we get all the predictions in a dataframe\n",
+    "# we sort by best prediction\n",
+    "all_predictions = all_predictions.sort_values(by=['Prediction'], ascending=False)\n",
+    "# we show the best 10\n",
+    "all_predictions.head(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, te best resuts are when *n_estimators* is set around X and *max_depth* is set to X. "
+    "As we can see, te best resuts are when *n_estimators* is set around 800 to 900 and *max_depth* is set around 47. Note that because we have a bit of randomness, the results are not deterministic.\n",
+    "\n",
+    "Now, we use thos numbers to create a random forest and train it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=800, max_depth=47, random_state=1)\n",
+    "clf.fit(vect_train, newsgroups_train)\n",
+    "pred = clf.predict(vect_valid)\n",
+    "metrics.f1_score(newsgroups_valid, pred, average='macro')"
    ]
   },
   {
@@ -961,7 +1050,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pred_test = clf.predict(vect_valid)\n",
+    "cm = metrics.confusion_matrix(newsgroups_test, pred_test)\n",
+    "plt.imshow(cm, interpolation='nearest', cmap=plt.cm.Blues)\n",
+    "plt.colorbar()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -975,13 +1069,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "features = pd.DataFrame(list(zip(vect_train, clf.feature_importances_)))\n",
+    "features = features.loc[features[1] != 0]\n",
+    "features = features.sort_values(by=[1], ascending=False)\n",
+    "features.head(10)"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -995,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
