--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -955,6 +955,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.accuracy_score(pred, newsgroups_valid)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -991,12 +1000,12 @@
     "rows = []\n",
     "# We made a few tries already to determine which values yield better results.\n",
     "# We have a double for loop. Which is aweful and will take a lot of time, but necessary.\n",
-    "for i in range(45, 51): #making sure the depth is not better above 30\n",
-    "    for j in range(700, 1100, 100): #step of 100 to not take too much time\n",
+    "for i in range(40, 100, 10): #making sure the depth is not better above 30\n",
+    "    for j in range(200, 1100, 100): #step of 100 to not take too much time\n",
     "        clf = RandomForestClassifier(n_estimators=j, max_depth=i, random_state=1)\n",
     "        clf.fit(vect_train, newsgroups_train)\n",
     "        pred = clf.predict(vect_valid)\n",
-    "        pred_result = metrics.f1_score(newsgroups_valid, pred, average='macro')\n",
+    "        pred_result = metrics.accuracy_score(newsgroups_valid, pred, average='macro')\n",
     "        # uncomment next line to be able to know where computation is at\n",
     "        # print(i,\" ; \", j)\n",
     "        rows.append([i, j, pred_result])"
@@ -1039,6 +1048,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.accuracy_score(pred, newsgroups_valid)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1053,8 +1071,28 @@
    "source": [
     "pred_test = clf.predict(vect_valid)\n",
     "cm = metrics.confusion_matrix(newsgroups_test, pred_test)\n",
-    "plt.imshow(cm, interpolation='nearest', cmap=plt.cm.Blues)\n",
-    "plt.colorbar()"
+    "#normalize the matrix\n",
+    "cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tu be able to read this matrix, lets put it into a DataFrame and add the right column names, then show the heatmap."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(cm)\n",
+    "df.columns = newsgroups_all.target_names\n",
+    "df.index = newsgroups_all.target_names\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "ax = sns.heatmap(df, cmap='OrRd')"
    ]
   },
   {
@@ -1070,10 +1108,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = pd.DataFrame(list(zip(vect_train, clf.feature_importances_)))\n",
-    "features = features.loc[features[1] != 0]\n",
+    "#get names of features and their importance\n",
+    "features = pd.DataFrame(list(zip(tfidf.get_feature_names(), clf.feature_importances_)))\n",
     "features = features.sort_values(by=[1], ascending=False)\n",
     "features.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us also have an idea of hom many features are important or not by plotting them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(clf.feature_importances_, bins=50)\n",
+    "plt.yscale('log')\n",
+    "plt.xlabel('Feature importance')\n",
+    "plt.ylabel('Number of features (log)');"
    ]
   }
  ],
